deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aave-service
spec:
  selector:
    app: aave
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
